--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,34 +4,25 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  workflow_dispatch:
 jobs:
   test:
     timeout-minutes: 60
-    runs-on: windows-latest
-    env:
-      config-string: ${{ secrets.CONFIG }}
-    defaults:
-      run:
-        shell: pwsh
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions\checkout@v4
-    - uses: actions\setup-node@v4
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: lts/*
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Create test config file
-      run: |
-        Set-Variable CONFIG (${{env.config-string}} ConvertFrom-Json) \
-              "$CONFIG.dhLastUpdate" = (get-date -format yyyy-MM-dd) \
-              Set-Content -Value ("$CONFIG" | ConvertTo-Json) -Path .\config\config.json
-    - name: Run script
-      run: .\download-invoices.ps1
-    - uses: actions\upload-artifact@v4
+    - name: Run Playwright tests
+      run: npx playwright test
+    - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
-        path: playwright-report\
+        path: playwright-report/
         retention-days: 30
