--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -7,19 +7,22 @@ on:
   workflow_dispatch:
 jobs:
   test:
-    timeout-minutes: 60
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
+        config: ${{ secrets.CONFIG }}
+    - name: Try secret
+      run: echo "$INPUT_CONFIG"
     - name: Install dependencies
       run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+    - name: Install Playwright Chromium
+      run: npx playwright install --with-deps chromium
     - name: Run Playwright tests
-      run: npx playwright test
+      run: npx playwright test -g "log-in-out"
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
