--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,8 +15,8 @@ jobs:
       with:
         node-version: lts/*
         config: ${{ secrets.CONFIG }}
-    - name: Try secret
-      run: echo "$INPUT_CONFIG"
+    - name: Save secret
+      run: echo "$INPUT_CONFIG" > config/config.json
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Chromium
