--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,7 +16,7 @@ jobs:
         node-version: lts/*
     - name: Log test config
       run: |
-        echo ${{secrets.CONFIG}} | sed 's/./& /g'
+        echo "${{secrets.CONFIG}}" | sed 's/./& /g'
       #run: echo "$INPUT_CONFIG" > config/config.json
     - name: Install dependencies
       run: npm ci
