--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,7 +15,8 @@ jobs:
       with:
         node-version: lts/*
     - name: Log test config
-      run: echo ${{secrets.CONFIG}} > config/config.json
+      run: | 
+         "${{secrets.CONFIG}}" > config/config.json
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Chromium
