--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,7 +16,7 @@ jobs:
         node-version: lts/*
     - name: Log test config
       run: | 
-         "${{secrets.CONFIG}}" > config/config.json
+         ${{secrets.CONFIG}} > config/config.json
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Chromium
