--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,13 +15,13 @@ jobs:
       with:
         node-version: lts/*
     - name: Log test config
-      run: echo ${{secrets.CONFIG}} > config/config.json
+      run: echo '${{secrets.CONFIG}}' > config/config.json
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Chromium
       run: npx playwright install --with-deps chromium
     - name: Run Playwright tests
-      run: npx playwright test -g "log-in-out"
+      run: npx playwright test
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
