--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,14 +8,19 @@ on:
 jobs:
   test:
     timeout-minutes: 10
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+    defaults:
+      run:
+        shell: pwsh
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
-    - name: Log test config
-      run: echo '${{secrets.CONFIG}}' > config/config.json
+    - name: Setup test config
+      run: Set-Variable CONFIG ('${{secrets.CONFIG}}' | ConvertFrom-Json) \
+        $CONFIG.dhLastUpdate = (get-date -format yyyy-MM-dd) \
+        Set-Content -Value ($CONFIG | ConvertTo-Json) -Path config\config.json          
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Chromium
