--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,7 +18,8 @@ jobs:
       with:
         node-version: lts/*
     - name: Setup test config
-      run: Set-Variable CONFIG ("${{secrets.CONFIG}}" | ConvertFrom-Json) \
+      run: echo '${{secrets.CONFIG}}' > config\config.json \
+        Set-Variable CONFIG ("${{secrets.CONFIG}}" | ConvertFrom-Json) \
         $CONFIG.dhLastUpdate = (get-date -format yyyy-MM-dd) \
         Set-Content -Value ($CONFIG | ConvertTo-Json) -Path config\config.json          
     - name: Install dependencies
