--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,6 +5,8 @@ on:
   pull_request:
     branches: [ main, master ]
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * 0'
 jobs:
   test:
     timeout-minutes: 10
@@ -17,14 +19,14 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
-    - name: Create config
-      run: echo '${{secrets.CONFIG}}' > config\config.json
-    - name: Setup config
-      run: .\.github\workflows\setup-config.ps1
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Chromium
       run: npx playwright install --with-deps chromium
+    - name: Create config
+      run: echo '${{secrets.CONFIG}}' > config\config.json
+    - name: Setup config
+      run: .\.github\workflows\setup-config.ps1
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v4
