--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,6 +11,8 @@ jobs:
   test:
     timeout-minutes: 10
     runs-on: windows-latest
+    permissions:
+      contents: write 
     defaults:
       run:
         shell: pwsh
@@ -20,10 +22,10 @@ jobs:
       with:
         node-version: lts/*
 
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Chromium
-      run: npx playwright install --with-deps chromium
+    #- name: Install dependencies
+    #  run: npm ci
+    #- name: Install Playwright Chromium
+    #  run: npx playwright install --with-deps chromium
     
     - name: Create config
       run: echo '${{secrets.CONFIG}}' > config/config.json
