--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,6 +21,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
+        token: ${{ secrets.SCARICAFATTUREDIGITALHUB_TOKEN }}
 
     #- name: Install dependencies
     #  run: npm ci
@@ -39,10 +40,16 @@ jobs:
     #  run: npx playwright test
     
     - name: Store new lastUpdate
-      env:
-        PAT: ${{ secrets.SCARICAFATTUREDIGITALHUB_TOKEN }}
       run: ./.github/workflows/setup-config.ps1 savelu
 
+    - name: Commit and Push
+      run: |
+        git config user.name "github-actions"
+        git config user.email "github-actions@users.noreply.github.com"
+        git add .github/workflows/lastUpdate.txt
+        git commit -m "chore: update lastUpdate $env:GITHUB_RUN_NUMBER [skip ci]"
+        git push
+    
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
