--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
-        token: sanfuonasfajk
+        token: ${{ secrets.SCARICAFATTUREDIGITALHUB_TOKEN }}
 
     #- name: Install dependencies
     #  run: npm ci
