--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,7 +13,6 @@ jobs:
     runs-on: windows-latest
     permissions:
       contents: write 
-      actions: write
     defaults:
       run:
         shell: pwsh
@@ -33,7 +32,7 @@ jobs:
       - name: Create config
         run: echo '${{secrets.CONFIG}}' > config/config.json
     
-      - name: Get lastUpdate and set it in config.json as dhLastUpdate
+      - name: Get lastUpdate and assign it in config/config.json to dhLastUpdate
         run: | 
           $lu = ./.github/workflows/setup-config.ps1 getlu
           ./.github/workflows/setup-config.ps1 setlu $lu
@@ -41,16 +40,8 @@ jobs:
       #- name: Run Playwright tests
       #  run: npx playwright test
     
-      - name: Store new lastUpdate
+      - name: Save new lastUpdate for next execution and push change
         run: ./.github/workflows/setup-config.ps1 savelu
-
-      - name: Commit and Push
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
-          git add .github/workflows/lastUpdate.txt
-          git commit -m "chore: update lastUpdate $env:GITHUB_RUN_NUMBER [skip ci]"
-          git push
     
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
