--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,6 +33,7 @@ jobs:
           echo '${{secrets.CONFIG}}' > config/config.json
           $lu = .github/utils/setup-config.ps1 getlu
           .github/utils/setup-config.ps1 setlu $lu
+          Tree
     
       - name: Run Playwright tests
         run: ./download-invoices.ps1
