--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,6 +33,10 @@ jobs:
           echo '${{secrets.CONFIG}}' > config/config.json
           $lu = .github/utils/setup-config.ps1 getlu
           .github/utils/setup-config.ps1 setlu $lu
+      
+      - name: Run tree
+        shell: bash
+        run: |
           sudo apt-get update
           sudo apt-get install -y tree
           tree .
