--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "postinstall": "playwright install chromium --with-deps",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "dev:test": "playwright test --reporter=list --workers=1 --headed --trace on --config=test/tests.config.ts",
+    "dev:test": "playwright test --config=test/tests.config.ts",
     "dev:generate-schema": "ts-node src/shared/schema-generator.ts"
   },
   "author": "zabaio",
