--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/node": "^20.19.33"
   },
   "dependencies": {
-    "@playwright/test": "^1.58.2",
+    "@playwright/test": "1.58.2",
     "adm-zip": "^0.5.16",
     "dayjs": "^1.11.13",
     "ts-node": "^10.9.2",
