--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,6 +21,9 @@ jobs:
         shell: pwsh
     steps:
       - uses: actions/checkout@v4
+
+      - name: Fix git ownership
+        run: git config --global safe.directory '*'
       
       - uses: actions/setup-node@v4
         with:
