--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,9 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ main, master, refactoring-to-just-nodejs ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ main, master, refactoring-to-just-nodejs ]
+    branches: [ main, master ]
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 0'
@@ -22,9 +22,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Fix git ownership
-        run: git config --global safe.directory '*'
-      
       - uses: actions/setup-node@v4
         with:
           node-version: 20
