--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "postinstall": "playwright install chromium --with-deps",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
+    "remote:start": "ts-node -r tsconfig-paths/register src/remote.ts",
+
     "dev:test": "playwright test --config=test/tests.config.ts",
     "dev:generate-schema": "ts-node src/shared/schema-generator.ts"
   },
