--- a/config/empty-config.json
+++ b/config/empty-config.json
@@ -2,7 +2,7 @@
     "dhUsername":  "",
     "dhPassword":  "",
     "dhCessionari":  [""],
-    "dhLastUpdate":  "2019-01-01",
+    "dhLastDayDownloaded":  "2019-01-01",
     "dhMaxChunkSize":  30,
     "dhXmlDir":  "data/xml/",
     "dhArchiveDir":  "data/archives/"
