--- a/.github/workflows/remote-start.yml
+++ b/.github/workflows/remote-start.yml
@@ -35,7 +35,7 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git fetch origin workflow
-          git checkout workflow -- last-run.json
+          git checkout origin/workflow -- last-run.json
     
       - name: Run main
         run: npm run remote:start
