--- a/.github/workflows/remote-start.yml
+++ b/.github/workflows/remote-start.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           node-version: 20
       - name: Install dependencies
-        run: npm ci --ignore-scripts
+        run: npm ci --ignore-scripts --omit-dev
     
       - name: Retrieve config secret
         env:
