--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -1,5 +1,6 @@
 name: Publish Docker Image
 on:
+  workflow_dispatch:
   push:
     branches: ['main'] # Crea l'immagine quando fai push su main
     paths:
