--- a/.github/workflows/remote-start.yml
+++ b/.github/workflows/remote-start.yml
@@ -12,6 +12,7 @@ jobs:
       options: --user root
     permissions:
       contents: write 
+      packages: read
     defaults:
       run:
         shell: pwsh
@@ -28,29 +29,19 @@ jobs:
         env:
           CONFIG_JSON: ${{ secrets.CONFIG }}
         run: $env:CONFIG_JSON | Out-File -FilePath config/config.json
-
+      
       - name: Restore last-run.json
         run: |
+          $ErrorActionPreference = 'SilentlyContinue'
           git config --global safe.directory '*'
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git fetch origin workflow 2>$null
-          if ($?) { 
-            git checkout origin/workflow -- last-run.json 2>$null
-            if (-not $?) { 
-              '{}' | Out-File -FilePath last-run.json -NoNewline }
-          } else { 
-            '{}' | Out-File -FilePath last-run.json -NoNewline 
+          git checkout origin/workflow -- last-run.json 2>$null
+          if (-not (Test-Path last-run.json)) {
+            '{}' | Out-File -FilePath last-run.json -NoNewline
           }
-
-      - name: Restore last-run.json
-        run: |
-          git config --global safe.directory '*'
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
-          git fetch origin workflow
-          git checkout origin/workflow -- last-run.json
-    
+          exit 0    
       - name: Run main
         run: npm run remote:start
 
