--- a/.github/workflows/playwright-test.yml
+++ b/.github/workflows/playwright-test.yml
@@ -19,6 +19,7 @@ jobs:
       options: --user root
     permissions:
       contents: write 
+      packages: read
     defaults:
       run:
         shell: pwsh
