--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test",
     "tsconfig.json",
     "!config/private-config.json",
-    "!config/rclone.conf",
+    "!config/rclone.conf"
   ],
   "author": "zabaio",
   "license": "MIT",
