--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scarica-fatture-digitalhub",
+  "name": "@zabaio/scarica-fatture-digitalhub",
   "version": "1.0.0",
   "description": "Scarica fatture da Zucchetti DigitalHub tramite Playwright.",
   "main": "src/main.ts",
